--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
 @import "tailwindcss";
+
 
 :root {
   --background: #ffffff;
@@ -13,6 +16,10 @@
 
   --color-verde: #C7EF4D;
   --color-negro: #262626;  
+  --color-gris: #4A4A4A;  
+  --color-crema: #FFFEEE;  
+
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,5 +32,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
